2008-09-11  Richard Hult  <richard@imendio.com>

	* Release 2.16.0 of the dbus version.

2008-09-11  Richard Hult  <richard@imendio.com>

	* gconf/Makefile.am (DISTCLEANFILES): Add generated dbus service
	file.

2008-05-15  Richard Hult  <richard@imendio.com>

	* gconf/gconf-database-dbus.c (gconf_database_notify_listeners):
	Get rid of critical warning (and crash when built with
	--disable-debug), when unsetting a key that has no writable
	sources.

2008-05-09  Richard Hult  <richard@imendio.com>

	* gconf/gconf-client.c: (gconf_client_flush_notifies): If the key
	is not in the cache, check if it's being monitored. Fixes issue
	where notifications were sent out for the first change after
	unsetting a key (for example).

2008-03-31  Richard Hult  <richard@imendio.com>

	* gconf/gconf-database.c (gconf_database_notify_listeners): Get
	rid of critical warning (and crash when built with
	--disable-debug), when unsetting a key that has no writable
	sources.

2008-03-05  Richard Hult  <richard@imendio.com>

	* gconf/gconf-client.c (remove_key_from_cache_recursively_foreach):
	Fix crash, not sure why a null entry can be in the cache though so
	this is more of a workaround.

2008-02-07  Richard Hult  <richard@imendio.com>

	* backends/Makefile.am: Patch from Ross Burton to fix build with
	--as-needed.

2008-01-28  Richard Hult  <richard@imendio.com>

	* gconf/gconf-dbus.c: Patch from Ross Burton to use right the
	match rule, fixes problems when using D-Bus 1.1.x.

2007-12-11  Richard Hult  <richard@imendio.com>

	* gconf/gconf-dbus.c: (ensure_dbus_connection),
	(gconf_dbus_message_filter): Warn instead of exit when we get
	disconnected from the bus.

2007-11-10  Richard Hult  <richard@imendio.com>

	* gconf/gconf-dbus.c: (gconf_handle_dbus_exception),
	(gconf_engine_all_entries), (gconf_engine_all_dirs),
	(gconf_engine_suggest_sync), (gconf_engine_dir_exists): Plug
	leaks (also do some s/bool/pointer/ in g_return_val_if_fail
	macros).
